--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./2-codewars.js"></script>
+    <script src="./7kyu/2-evenNum.js"></script>
 </body>
 </html>
